chore: fix release-please-config.json

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -32,7 +32,7 @@
       "skip-github-release": false,
       "versioning": "default",
       "extra-files": [
-        "zarf.yaml"
+        "zarf-config.yaml"
       ]
     }
   }
