feat: add client secret and pod label for wiring up keycloak and authservice in front of podinfo

--- a/values.yaml
+++ b/values.yaml
@@ -1,10 +1,14 @@
 # Values file for Podinfo
 
+image:
+  repository: "###ZARF_CONST_IMAGE_REPO###"
+  tag: "###ZARF_CONST_IMAGE_VERSION###"
+
+podLabels:
+  protect: keycloak
+
 istio:
   enabled: true
   podinfo:
     gateways:
       - istio-system/tenant
-image:
-  repository: "###ZARF_CONST_IMAGE_REPO###"
-  tag: "###ZARF_CONST_IMAGE_VERSION###"
