--- a/zarf-config.yaml
+++ b/zarf-config.yaml
@@ -4,9 +4,9 @@ package:
       # x-release-please-start-version
       PACKAGE_VERSION: 0.0.4
       # x-release-please-end
-      CHART_REPO: https://repo1.dso.mil/big-bang/apps/sandbox/podinfo.git
+      CHART_REPO: https://github.com/RothAndrew/repo1-podinfo-chart.git
       # renovate: datasource=git-tags depName=https://repo1.dso.mil/big-bang/apps/sandbox/podinfo.git versioning=loose
-      CHART_VERSION: 6.0.0-bb.8
+      CHART_VERSION: 6.0.0-bb.9
       IMAGE_REPO: ghcr.io/stefanprodan/podinfo
       # renovate: datasource=github-tags depName=stefanprodan/podinfo
       IMAGE_VERSION: 6.4.1
